[tool.poetry]
name = "fastapi-jwt-authentication-guide"
version = "0.1.0"
description = ""
authors = ["Peter <pedro357bm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyjwt = "^2.9.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
fastapi = {extras = ["standard"], version = "^0.115.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
